--- a/css/style.css
+++ b/css/style.css
@@ -1903,6 +1903,25 @@ body, button {
   height: 23px;
 }
 
+.cart__remove {
+  color: #5e5e5e;
+  font-size: 14px;
+  margin-top: 40px;
+  cursor: pointer;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.cart__remove:hover {
+  text-decoration: underline;
+  color: #454545;
+}
+
+.cart__remove > i {
+  margin-right: 3px;
+  font-size: 13px;
+}
+
 .error {
   color: #df0000;
   font-weight: 500;
